k8s/vault/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  type: ClusterIP
